--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.2",
+    "nodemon": "^3.0.1",
     "sequelize": "^6.33.0"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+  "type": "commonjs"
 }
