--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "test": "jest",
+    "start": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +19,9 @@
     "nodemon": "^3.0.1",
     "sequelize": "^6.33.0"
   },
-  "type": "commonjs"
+  "type": "commonjs",
+  "devDependencies": {
+    "@types/jest": "^29.5.10",
+    "jest": "^29.7.0"
+  }
 }
